Implement byline helper register

--- a/EpiBot/Epibot.csproj
+++ b/EpiBot/Epibot.csproj
@@ -23,4 +23,10 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+   <None Update="appsettings.json">
+     <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+   </None>
+</ItemGroup>
+
 </Project>
