--- a/EpiBot/Epibot.csproj
+++ b/EpiBot/Epibot.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="3.2.0" />
+    <PackageReference Include="FuzzySharp" Version="2.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.13" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.13">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
